# conversations

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  conversation.html  conversation.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  lint-docstrings.yml  lint-spelling.yml  lint-types.yml  md-lint.yml  release.yml  review.yml  test.yml
api/: index.html
changelog/: index.html
contributing/: index.html
conversations/: __about__.py  __init__.py  _conversations.py  config.py
conversations/ai/: __init__.py  _chatgpt.py  _shorten_transcript.py
conversations/diarise/: __init__.py
conversations/diarise/simple/: __init__.py  _simple.py
conversations/report/: __init__.py  _report.py  _text.py  _utils.py
conversations/transcribe/: __init__.py  _transcribe.py  _whisper.py
conversations/transcribe/assembly/: __init__.py  _assembly.py
conversations/transcribe/whisper/: __init__.py  _whisper.py
docs/: api.md  changelog.md  contributing.md  examples.md  index.md  readme.md
examples/: index.html  podcast_example.py
search/: search_index.json
tests/: __init__.py  test_config.py  test_conversations.py  test_package.py
tests/ai/: test_chatgpt.py
tests/diarise/: test_diarisation.py
tests/report/: test_reports.py
tests/transcribe/: test_assembly.py  test_whisper.py
